# ratatui-template

./: Cargo.toml  README.md
data/: customer_orders.csv  inventory.csv
src/: app.rs  error.rs  event.rs  main.rs
