[package]
name = "ratatui-template"
version = "0.1.0"
authors = ["Sabry Awad <dr.sabry97@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
log = "0.4.22"
ratatui = "0.29.0"
thiserror = "1.0.65"
tokio = { version = "1.40.0", features = ["full"] }
